# try-langServe

./: Dockerfile  README.md  environment.yml  lang.py  pyproject.toml
app/: server.py
