[tool.poetry]
name = "lang-serve-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11.0"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
langchain-community = ">=0.0.9,<0.1"
langchain = ">=0.1,<0.2"
pydantic = "<2"
vertexai-chuck-norris = {path = "packages/vertexai-chuck-norris", develop = true}
rag-opensearch = {path = "packages/rag-opensearch", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
